feat: add todos

--- a/notebooks/ping.ipynb
+++ b/notebooks/ping.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,17 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_completion(prompt, model=\"gpt-3.5-turbo-1106\"):\n",
+    "def get_completion(prompt): \n",
     "    response = client.chat.completions.create(\n",
-    "        model=model,\n",
+    "        model=\"gpt-3.5-turbo-1106\", # gpt-4-1106-preview: possible but expensive\n",
     "        response_format={ \"type\": \"json_object\" },\n",
     "        messages=[\n",
-    "                  {\"role\": \"system\", \"content\": \"You are a helpful assistant designed to output JSON.\"},\n",
-    "                  {\"role\": \"user\", \"content\": prompt},\n",
+    "                    {\"role\": \"system\", \"content\": \"You are a helpful assistant designed to output JSON.\"},\n",
+    "                    {\"role\": \"user\", \"content\": prompt},\n",
     "                ],\n",
     "        temperature=0.2, # [0,2] high values are more random and less deterministic\n",
     "        #stream=True, # enable to get a ChatGPT-like experiance\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -60,14 +60,19 @@
       "CompletionUsage(completion_tokens=12, prompt_tokens=27, total_tokens=39)\n",
       "{\n",
       "  \"response\": \"This is a test.\"\n",
-      "}"
+      "}\n"
      ]
     }
    ],
    "source": [
     "prompt_test = \"Say this is a test.\"\n",
     "response = get_completion(prompt_test)\n",
-    "print(response)"
+    "print(response)\n",
+    "\n",
+    "# TODO\n",
+    "# upload file via UI\n",
+    "# question regarding file\n",
+    "# !!! limit tokens -> response length !!! (system)\n"
    ]
   }
  ],
