--- a/notebooks/guc2.ipynb
+++ b/notebooks/guc2.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GUI2 – Insights formulieren\n",
+    "- Erstelle ein Key-Insight pro Eintrag -> Ein vollständiges Beispiel vorgeben.\n",
+    "- Fasse alle Insights zu 3 Insights zusammen."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -10,6 +19,9 @@
     "# Ersten drei Einträge als Beispiel nutzen und dann nur 10 Weitere generieren lassen.\n",
     "# Alle bringt nichts, da wir eh nicht alles evaluierten können...\n",
     "\n",
+    "# -> !!! Eine weitere Detaillierung der Analyse könnte durch das Einbeziehen von qualitativen Einsichten aus den Antworten zu jeder Leitfrage erreicht werden.\n",
+    "# = Key-Insight => Aufklären, dass Beispiel die Antwort auf die Leitfrage ist !!!\n",
+    "\n",
     "# <TODO: Hier funktioniert noch was nicht...!, ggf. aber auch nicht wichtig? -> key insights>\n",
     "guc1_schwerpunktgruppen_beispiele = \"\"\"\n",
     "Bearbeite nun weitere Aufgaben Schritt für Schritt:\n",
@@ -17,8 +29,8 @@
     "2. Extrahiere thematische Schwerpunkte zu jedem Beispiel.\n",
     "3. Gruppiere Beispiele anhand thematischer Schwerpunkte.\n",
     "4. Beschreibe jede Gruppe in einem Satz.\n",
-    "Reflexionsaufgabe: Schreibe zum Schluss eine Anmerkung in 2-3 Sätzen zu deiner Analyse und gib an, \n",
-    "wie ich dir helfen kann deine Analyse beim nächsten Mal zu optimieren.\n",
+    "4. Beschreibe wichtige Erkentnisse der Analyse in 2-3 Sätzen.\n",
+    "5. Gebe in 1 Satz an wie ich das Prompt optimieren kann.\n",
     "\n",
     "Generiere deine vollständige Antwort lückenlos als JSON mit folgender Struktur:\n",
     "{\n",
