--- a/notebooks/guc2.ipynb
+++ b/notebooks/guc2.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GUI2 – Insights formulieren\n",
-    "- Erstelle ein Key-Insight pro Eintrag -> Ein vollständiges Beispiel vorgeben.\n",
-    "- Fasse alle Insights zu 3 Insights zusammen."
+    "# GUC2 – Insights generieren\n",
+    "\n",
+    "- Antworten generiert mit fine-funed GPT-4 \"GPT Data Analysis\" via ChatGPT.\n",
+    "- Beispielhaft an der Datei Regionalwerkstatt_Nord\n",
+    "- 3 Prompts"
    ]
   },
   {
@@ -15,15 +17,149 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GGf. besser:\n",
-    "# Ersten drei Einträge als Beispiel nutzen und dann nur 10 Weitere generieren lassen.\n",
-    "# Alle bringt nichts, da wir eh nicht alles evaluierten können...\n",
+    "guc2_briefing = \"\"\"\n",
+    "Das operative Stiftungsprojekt \"Bildungslabor München\", konzipiert und begleitet von der \"Hans Sauer Stiftung\",\n",
+    "bildet einen Rahmen für den aktuellen Fortschreibungsprozess der Leitlinie Bildung des Referats für Bildung und \n",
+    "Sport der Landeshauptstadt München. Das \"Bildungslabor München\" ist eine Plattform zur Entstehung von zukunftsfähigen \n",
+    "Ansätzen und Ideen für eine nachhaltige Weiterentwicklung der Bildungslandschaft Münchens und setzt Bildung in den \n",
+    "Kontext von Stadt und Stadtgesellschaft.\n",
     "\n",
-    "# -> !!! Eine weitere Detaillierung der Analyse könnte durch das Einbeziehen von qualitativen Einsichten aus den Antworten zu jeder Leitfrage erreicht werden.\n",
-    "# = Key-Insight => Aufklären, dass Beispiel die Antwort auf die Leitfrage ist !!!\n",
+    "Zu Beginn des Stiftungsprojekts wurden im Rahmen des Formats \"Admin Lab\" die heterogenen Perspektiven und Expertisen \n",
+    "aus der Stadtverwaltung auf das Thema Bildung genutzt um Themen und Fragen (=Leitfragen) zu entwickelt.\n",
     "\n",
-    "# <TODO: Hier funktioniert noch was nicht...!, ggf. aber auch nicht wichtig? -> key insights>\n",
+    "Anschließend wurden in den vier Regionalwerkstätten in den vier Himmelsrichtungen von München verschiedensten Personen aus dem \n",
+    "Bildungsbereich in München zu einer Workshop-Reihe eingeladen. Ziel war es, Wissen und Erfahrungen aus unterschiedlichen Bereichen \n",
+    "des Münchner Bildungssystems zu sammeln und zu dokumentieren. Die Personen teilten sich während der Workshops selbst nach \n",
+    "ihrer Expertise und Hintergrund in eine der drei Lebensphasen (\"Frühe Kindheit\", \"Kindheit und Jugendalter\", \"Jugend \n",
+    "und Erwachsenenalter\") ein und beantworteten die Leitfragen des \"Admin Lab\" aus ihrer Lebensphase.\n",
+    "\n",
+    "Die Ergebnisse der \"Regionalwerkstatt Nord\" befinden sich in der Datei die ich dir hochgeladen habe.\n",
+    "\n",
+    "Du bist Teil des Teams der \"Hans Sauer Stiftung\" und sollst nun die Ergebnisse verarbeiten.\n",
+    "\n",
+    "Sage \"Bereit\", wenn du bereit bist für eine Aufgabe.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5-10 Key-Insights reichen für die Evaluation.\n",
+    "\n",
+    "guc2_key_insights = \"\"\"\n",
+    "Deine Aufgabe besteht darin sogenannte Key-Insights zu generieren.\n",
+    "- Key-Insights fassen die Antwort einer Leitfrage in Spalte \"Leitfrage\" auf die wichtigsten Informationen in 20-45 Wörter zusammen.\n",
+    "- Die Antwort besteht aus den Spalten \"Titel des Beispiels\", \"1) Beschreibe Dein konkretes Beispiel.\", \"2) Was läuft gut oder schlecht?\", \"3) Woran liegt es, dass es so läuft?\".\n",
+    "- Key-Insights sind einheitlich wie folgt struktur: \"<Kernaussage A> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <Kernaussage B> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <Kernaussage C>\".\n",
+    "- Die <Kernaussage B> und <Kernaussage C> sind optional. Wird zum Beispiel auf <Kernaussage C> verzichtet sieht die Struktur wie folgt aus: \"<Kernaussage A> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <Kernaussage B>\".\n",
+    "\n",
+    "Bearbeite die Aufgabe Schritt für Schritt und fokusiere dich pro Key-Insight auf den dazugehörigen Inhalt einer Zeile.\n",
+    "Beispiel zur Erstellung der Key-Insights für die Antworten in Zeile 2,3 und 4:\n",
+    "{\n",
+    "    \"Zeile 2\": {\n",
+    "        \"Titel des Beispiels\":\"fehlende Vorkurs Deutsch Plätze\",\n",
+    "        \"1) Beschreibe Dein konkretes Beispiel.\":\"Ergebnis einer Befragung im Rahmen der Wirkungsorientierten Steuerung der Münchner Förderformel bzw. des Standortfaktors: vor allem Einrichtungen mit Standortfaktor (in belasteten Stadtteilen) erhalten weniger Vorkurs-Plätze als sie Bedarf hätten - Kinder, die die Förderungen bräuchten erhalten keinen Zugang.\",\n",
+    "        \"2) Was läuft gut oder schlecht?\":\"Positiv: Bereitschaft der Einrichtung an Befragung teilzunehmen Negativ: Gründe, warum weniger Kinder zum Vorkurs gemeldet werden als Bedarf hätten sind noch unklar und müssen herausgefunden werden. Hol und Bringsituation liegt (meist) bei den Eltern -> wie können diese weiter unterstützt werden, damit die Hol und Bringsituation zum Vorkurs kein Hindernis mehr zur Teilnahme ist?\",\n",
+    "        \"3) Woran liegt es, dass es so läuft?\":\"Den Moment erlebe ich nur in Zahlen in Form der Ergebnisse der Befragung. Was ich brauche sind Ressourcen, um die Erhebung fortzuführen und noch offene Fragestellungen klären zu können. Ändern müsste sich der Fachkräftemangel bzgl. des Vorkurses sowie die Sicherstellung der Hol- und Bringsituation sodass die Kinder die sprachliche Bildung erhalten, die in alle späteren Bereiche mit einwirkt.\",\n",
+    "        \"Key-Insight\": \"Besonders in Stadtteilen in denen Kinder ein höheres Maß an sprachlicher Förderung benötigen bleibt diesen der Zugang oft verwährt WEIL es unter anderem auch stark vom Einsatz der Eltern abhängt UND diese brauchen aber mehr Unterstützung.\"\n",
+    "    },\n",
+    "    \"Zeile 3\": {\n",
+    "        \"Titel des Beispiels\":\"Bildungsgerechtigkeit / Chancengleichheit\",\n",
+    "        \"1) Beschreibe Dein konkretes Beispiel.\":\"Es geht um den Übertritt der Schüler aus der 4. GS-Klasse in eine weiterführende Schule, vorrangig in ein Gymnasium im 24. Stadtbezirk. Trotz Vorliegen des Übertritts-Zeugnisses werden diese Kinder bfehlende Vorkurs Deutsch Plätzeenachteiligt, sie müssen einen längeren Schulweg in ein Gymnasium außerhalb des Stadtbezirks in Kauf nehmen. Oder wählen dann als \"Ausweg\" einen Übertritt in eine Realschulefehlende Vorkurs Deutsch Plätze\",\n",
+    "        \"2) Was läuft gut oder schlecht?\":\"Kinder aus Famlien mit Migrationshintergrund haben eine geringere Chance auf einen Platz in einem Gymnasium. Chancengleichheit ist oft davon abhängig, in welches Elternhaus ein Kind geboren wird. Das darf nicht sein. Die soziale Herkunft darf kein Nachteil für KInder sein, das Wohnviertel keine Rolle spielen.\",\n",
+    "        \"3) Woran liegt es, dass es so läuft?\":\"Es gibt im Münchner Norden zu wenig Gymnasien. Eltern, die der dt. Sprache nicht so mächtig sind haben Probleme die formellen Notwendigkeiten zu erledigen. Der Neubau von Schulen erfolgt viel zu langsam. Anhand der Bauvorhaben im Wohnunsgsbau ist der Zuwachs der Einwohner und damit der Bedarf an Schulen zu berücksichtigen und zu realisieren.\",\n",
+    "        \"Key-Insight\": \"Trotz Vorliegen des Übertritts-Zeugnisses haben Kinder aus Familien mit Migrationshintergrund eine geringere Chance auf einen Gymnasiums-Platz WEIL es im Münchner Norden zu wenig Gymnasien gibt UND Sprachbarrieren der Eltern eine Barriere bei formellen Notwendigkeiten darstellen.\"\n",
+    "    },\n",
+    "    \"Zeile 4\": {\n",
+    "        \"Titel des Beispiels\":\"Sport zur Gesundheitserhaltung und gesunde Ernährung\",\n",
+    "        \"1) Beschreibe Dein konkretes Beispiel.\":\"Es gibt die Angebote von Obst in der Mensa und auch die Empfehlung von sog. Bürogymnastik für ca. 5 Minuten am Tag im Unterricht.\",\n",
+    "        \"2) Was läuft gut oder schlecht?\":\"Gut: es gibt überhaupt Obst und die Idee von Bürogymnastik schlecht: zu wenig im Bewusstsein der Schüler, Lehrer wollen nichtr darauf aufmerksam machen bzw. keine Unterrichtszeit \"opfern\".\",\n",
+    "        \"3) Woran liegt es, dass es so läuft?\": \"Obst ist nicht kostenlos, zu wenig zugänglich Bürogymnastik wird nicht vermittelt/praktiziertm siehe links, Lehrer wollen keine Unterrichtszeit opfern, haben keine Zusicherung, dass es nicht zu ihrem Nachteil ist.\",\n",
+    "        \"Key-Insight\": \"An meiner Berufsschule gibt es die Empfehlung, 5 Minuten \"Bürogymnastik\" in den Unterricht zu integrieren ABER die Lehrkräfte wollen keine Unterrichtszeit dafür opfern.\"\n",
+    "    }\n",
+    "}\n",
+    "1. Erstelle einen Key-Insight für die Antwort in Zeile 5.\n",
+    "2. Erstelle einen Key-Insight für die Antwort in Zeile 6.\n",
+    "3. Gebe in 1 Satz an wie ich das Prompt optimieren kann.\n",
+    "\"\"\"\n",
+    "\n",
+    "# GPT:\n",
+    "# ## Key-Insight für die Antwort in Zeile 5:\n",
+    "# In der Verbesserung der Informationsweitergabe von Beratungsangeboten besteht Handlungsbedarf, \n",
+    "# WEIL oftmals Informationen nicht alle Schüler*innen erreichen\n",
+    "# UND dadurch Chancengleichheit beeinträchtigt wird.\n",
+    "#\n",
+    "# ## Key-Insight für die Antwort in Zeile 6:\n",
+    "# Das 'Münchner Haus der Schüler*innen' fördert aktive Partizipation und Engagement junger Erwachsener,\n",
+    "# ABER es bedarf einer breiteren Anerkennung und Unterstützung, um seine volle Wirkung zu entfalten.\n",
+    "#\n",
+    "# ## Optimierungsvorschlag für das Prompt:\n",
+    "# Definiere klar, welche Informationen aus den Antworten genutzt werden sollen, um die Key-Insights zu erstellen.\n",
+    "# Ein Beispiel oder eine Vorlage für die Struktur der Key-Insights kann hilfreich sein.\n",
+    "\n",
+    "# USER: \n",
+    "# Erstelle weitere Key-Insights für die Antwort in Zeile 7, 8 und 9.\n",
+    "\n",
+    "# GPT:\n",
+    "# ## Key-Insight für die Antwort in Zeile 7:\n",
+    "# Gesundheitsthemen sind im Lehrplan verankert,\n",
+    "# ABER ihr Erfolg hängt stark vom Engagement der Lehrkräfte und der Schulleitung ab,\n",
+    "# DESWEGEN variiert die Umsetzung stark.\n",
+    "# \n",
+    "# ## Key-Insight für die Antwort in Zeile 8:\n",
+    "# Die Verbindung von Theorie und Praxis in der Bildungsgerechtigkeit wird durch Projekte wie den 'Kochwagen' gefördert,\n",
+    "# WEIL großes Engagement der Verantwortlichen besteht, ABER es bedarf kontinuierlicher Ressourcen und Unterstützung.\n",
+    "# \n",
+    "# ## Key-Insight für die Antwort in Zeile 9:\n",
+    "# Diskriminierung in Mittelschulen wird oft übersehen,\n",
+    "# WEIL zu wenig Aufklärung und zu großer Einfluss von Vorurteilen bestehen,\n",
+    "# DESWEGEN müssen gezielte Aufklärungsmaßnahmen eingeführt werden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guc2_kategorie_insights = \"\"\"\n",
+    "\n",
+    "<TODO: Zusammenfassung der Key-Insights: 1 Key-Insight pro Kategorie>\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MISC / WIP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "guc1_schwerpunktgruppen_beispiele = \"\"\"\n",
+    "Bearbeite folgende Aufgabe Schritt für Schritt und generiere deine fertige Analyse lückenlos im JSON Format mit folgender Struktur:\n",
+    "{\n",
+    "    \"Datei\": <Dateiname>,\n",
+    "    \"1,2,3\": [{<Kategorie>: [{<Leitfrage Nummer>: <Anzahl>}]}]\n",
+    "}\n",
+    "1. Gruppiere die Leitfragen aus der Spalte \"Leitfrage\" nach der zugehörigen Kategorie in der Spalte \"Kategorie\" und update entsprechend das JSON.\n",
+    "2. Zähle wie häufig die jeweiligen Leitfragen pro Kategorie beantwortet wurden und update entsprechend das JSON.\n",
+    "3. Sortiere die Einträge absteigend nach Häufigkeit und update entsprechend das JSON.\n",
+    "\n",
+    "4. Beschreibe wichtige Erkentnisse der Analyse in 1-2 Sätzen.\n",
+    "5. Gebe in 1 Satz an wie ich das Prompt optimieren kann.\n",
+    "\n",
+    "---\n",
+    "\n",
     "Bearbeite nun weitere Aufgaben Schritt für Schritt:\n",
     "1. Analysiere die Beispiele bestehend aus den Spalten \"Titel des Beispiels\", \"1) Beschreibe Dein konkretes Beispiel.\", \"2) Was läuft gut oder schlecht?\", \"3) Woran liegt es, dass es so läuft?\".\n",
     "2. Extrahiere thematische Schwerpunkte zu jedem Beispiel.\n",
@@ -37,6 +173,11 @@
     "    \"Datei\": <Dateiname>,\n",
     "    <Gruppe>: [{\"Beschreibung\": <Beschreibung der Gruppe>, \"Beispiele\": [<Indize der Zeile des Beispiels in der Tabelle>]}]\n",
     "}\n",
+    "\n",
+    "Gliederung des Outputs:\n",
+    "- Ergebnis der Analyse im JSON Format\n",
+    "- Wichtige Erkentnisse\n",
+    "- Prompt Optimierung\n",
     "\"\"\"\n",
     "\n",
     "# <TODO: Hier funktioniert noch was nicht...!, ggf. aber auch nicht wichtig? -> key insights>\n",
@@ -55,13 +196,6 @@
     "7. Gebe in 1 Satz an wie ich das Prompt optimieren kann.\n",
     "\"\"\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
