--- a/notebooks/guc2.ipynb
+++ b/notebooks/guc2.ipynb
@@ -38,7 +38,10 @@
     "Du bist Teil des Teams der \"Hans Sauer Stiftung\" und sollst nun die Ergebnisse verarbeiten.\n",
     "\n",
     "Sage \"Bereit\", wenn du bereit bist für eine Aufgabe.\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "# GPT:\n",
+    "# Bereit."
    ]
   },
   {
