--- a/notebooks/guc1.ipynb
+++ b/notebooks/guc1.ipynb
@@ -484,6 +484,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Optional für weitere Analyse-Ideen\n",
     "guc1_was_analysieren = \"\"\"\n",
     "Was wäre besonders spannend zu analysieren basierend auf den vorliegenden Daten aus der Regionalwerkstatt Nord?\n",
     "Liste fünf Vorschläge auf.\n",
