--- a/notebooks/guc1.ipynb
+++ b/notebooks/guc1.ipynb
@@ -502,24 +502,27 @@
     "Beantworte folgende Aufgabe Schritt für Schritt in 2-3 Sätzen:\n",
     "1. Erinnere dich an deine Analyse zur Verteilung der Leitfragen, Bildungseinrichtungen und Lebensphasen.\n",
     "2. Haben ausreichend Personen, definiert durch deren Rolle in den Spalten \"Rolle\" und \"Rolle (Sonstiges)\" und Alter in der Spalte \"Alter\", am Workshop teilgenommen?\n",
-    "3. Gebe in 1 Satz an wie ich das Prompt optimieren kann.\n",
+    "3. Ziel war es, Wissen und Erfahrungen aus unterschiedlichen Bereichen des Münchner Bildungssystems zu sammeln und zu dokumentieren.\n",
+    "4. Gebe in 1 Satz an wie ich das Prompt optimieren kann.\n",
     "\"\"\"\n",
     "\n",
     "# GPT:\n",
-    "# 1. In meiner Analyse wurden die Leitfragen, Bildungseinrichtungen und Lebensphasen aus der Datei \n",
-    "# detailliert untersucht. Es wurde festgestellt, dass bestimmte Kategorien wie Bildungsgerechtigkeit, \n",
-    "# Bildungsinhalte, Bildungsorte und Digitalisierung unterschiedlich häufig diskutiert wurden und dass \n",
-    "# verschiedene Bildungseinrichtungen in unterschiedlichem Maße vertreten waren. Außerdem wurde die \n",
-    "# Verteilung der Teilnehmenden auf verschiedene Lebensphasen analysiert.\n",
+    "# 1. Meine Analyse zeigte, dass die Leitfragen, Bildungseinrichtungen und Lebensphasen in den Daten der \n",
+    "# Regionalwerkstatt Nord vielfältig vertreten sind. Dabei wurden die Themen und Fragen aus unterschiedlichen\n",
+    "# Perspektiven bearbeitet, und verschiedene Bildungseinrichtungen waren involviert.\n",
     "#\n",
-    "# 2. Hinsichtlich der Teilnahme reicht das Spektrum der Rollen von Lehrern und Sozialpädagogen bis hin\n",
-    "# zu Schülern und Elternvertretern, was auf eine breite Palette an Perspektiven hinweist. Jedoch lag \n",
-    "# der Schwerpunkt des Alters der Teilnehmenden in der Gruppe \"25-64\", was auf eine mögliche Unterrepräsentation \n",
-    "# jüngerer und älterer Altersgruppen hindeutet. Ob \"ausreichend\" Personen teilgenommen haben, hängt von \n",
-    "# den spezifischen Zielen und Erwartungen des Workshops ab.\n",
+    "# 2. Die Daten legen nahe, dass eine breite Palette von Rollen am Workshop teilgenommen hat, was auf eine \n",
+    "# umfassende Abdeckung verschiedener Sichtweisen hindeutet. Allerdings zeigte die Altersverteilung eine \n",
+    "# stärkere Präsenz der Altersgruppe \"25-64\", was auf eine potenzielle Unterrepräsentation jüngerer und \n",
+    "# älterer Teilnehmer hindeuten könnte.\n",
     "#\n",
-    "# 3.Um eine genauere Beurteilung der Teilnahmevielfalt zu ermöglichen, könnte das Prompt um spezifische \n",
-    "# Erwartungen oder Zielvorgaben für die Teilnehmerzusammensetzung nach Rolle und Alter erweitert werden."
+    "# 3. Basierend auf der Vielfalt der Rollen und der Abdeckung verschiedener Bildungseinrichtungen scheint \n",
+    "# das Ziel, Wissen und Erfahrungen aus unterschiedlichen Bereichen des Münchner Bildungssystems zu sammeln, \n",
+    "# weitgehend erreicht worden zu sein. Eine breitere Altersverteilung hätte jedoch möglicherweise zu noch \n",
+    "# vielfältigeren Einsichten geführt.\n",
+    "#\n",
+    "# 4. Um das Prompt zu optimieren, könnte eine spezifischere Fragestellung zur Relevanz und zum Einfluss \n",
+    "# der Altersverteilung und Rollen auf die gesammelten Erkenntnisse und Schlussfolgerungen des Workshops beitragen."
    ]
   },
   {
